4. Creating an Object Relational Mapper Using an Object Metamodel